--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.7",
         "mockery/mockery": "^1.4.2",
+        "neo/little-sail": "^1.0",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
     },
