--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./docker/7.4
+            context: ./docker/7.4-alpine-alpine
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
