--- a/docker/7.4-alpine/Dockerfile
+++ b/docker/7.4-alpine/Dockerfile
@@ -7,9 +7,9 @@ WORKDIR /var/www/html
 ENV TZ=UTC
 ENV DEBIAN_FRONTEND noninteractive
 
-COPY php.ini /usr/local/etc/php/conf.d/99-sail.ini
-COPY start-container /usr/local/bin/start-container
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ./docker/7.4-alpine/php.ini /usr/local/etc/php/conf.d/99-sail.ini
+COPY s./docker/7.4-alpine/tart-container /usr/local/bin/start-container
+COPY ./docker/7.4-alpine/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
