--- a/docker/7.4-alpine/Dockerfile
+++ b/docker/7.4-alpine/Dockerfile
@@ -3,6 +3,7 @@ FROM php:7.4-cli-alpine3.13
 LABEL maintainer="Neo Ighodaro"
 
 WORKDIR /var/www/html
+COPY . .
 
 ENV TZ=UTC
 ENV DEBIAN_FRONTEND noninteractive
