--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.0.5
 RUN apt-get update -y && apt-get install -y openssl zip unzip git libonig-dev
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN docker-php-ext-install pdo mbstring
+RUN docker-php-ext-install pdo mbstring ldap redis intl soap imap pdo_mysql memcached msgpack pgsql bcmath igbinary gd zip
 WORKDIR /app
 COPY . /app
 RUN composer install
