--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "php artisan clear-compiled", "php artisan optimize", "chmod -R 777 storage"
         ]
     },
     "extra": {
