--- a/.env
+++ b/.env
@@ -54,3 +54,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+URL_FRONTEND=https://spiking-trust.vercel.app
