--- a/composer.json
+++ b/composer.json
@@ -49,11 +49,11 @@
             "@php artisan key:generate --ansi"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize",
+            "@php artisan clear-compiled",
+            "@php artisan optimize",
             "chmod -R 777 storage",
             "chmod -R 777 resources/views",
-            "php artisan passport:keys"
+            "@php artisan passport:keys"
         ]
     },
     "extra": {
