--- a/.env
+++ b/.env
@@ -7,19 +7,19 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=spiking_trust
-DB_USERNAME=root
-DB_PASSWORD=123456
-
 #DB_CONNECTION=mysql
-#DB_HOST=139.59.104.184
+#DB_HOST=localhost
 #DB_PORT=3306
-#DB_DATABASE=laravel
-#DB_USERNAME=spiking_laravel
-#DB_PASSWORD="U@zq3V3MEJ#?2]Ng"
+#DB_DATABASE=spiking-trust
+#DB_USERNAME=root
+#DB_PASSWORD=root
+
+DB_CONNECTION=mysql
+DB_HOST=139.59.104.184
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=spiking_laravel
+DB_PASSWORD="U@zq3V3MEJ#?2]Ng"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -55,4 +55,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-URL_FRONTEND=https://spiking-trust.vercel.app
+URL_FRONTEND=https://trust-dev.spiking.com
